--- a/ClientApp/src/components/NavMenu/style.scss
+++ b/ClientApp/src/components/NavMenu/style.scss
@@ -14,5 +14,11 @@ html {
 }
 
 .box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+  box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, 0.05);
+}
+
+header {
+  position: fixed;
+  background-color: white;
+  width: 100%;
 }
