--- a/ClientApp/src/components/NavMenu/style.scss
+++ b/ClientApp/src/components/NavMenu/style.scss
@@ -14,5 +14,42 @@ html {
 }
 
 .box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+  box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, 0.05);
+}
+
+.search-input {
+  border-width: 1px;
+  border-radius: 4px;
+  border-color: #bbc0c4;
+  width: 45vw;
+}
+
+nav {
+  height: 50px;
+  justify-content: start;
+}
+
+.profile-icon {
+  height: 25px;
+  width: 25px;
+}
+
+.se-icon {
+  height: 20px;
+  width: 18px;
+}
+
+.nav-button {
+  margin: 0;
+  height: 50px;
+  top: 0;
+  border: 0;
+  background-color: white;
+  color: grey;
+}
+
+.profile-reputation {
+  margin: 0;
+  padding: 0;
+  padding-left: 0.25rem;
 }
