--- a/ClientApp/src/custom.scss
+++ b/ClientApp/src/custom.scss
@@ -46,3 +46,100 @@ code {
   background-color: red;
   width: 20%;
 }
+
+.home-top-h1 {
+}
+
+// .home-page {
+//   display: flex;
+//   flex-wrap: wrap;
+//   flex-direction: row;
+//   justify-content: space-between;
+// }
+
+// .home-top-right {
+//   display: flex;
+//   justify-content: flex-end;
+// }
+
+// .home-ask-questions {
+//   background-color: #0395ff;
+//   color: white;
+//   border-radius: 5px;
+// }
+
+// .home-sort-buttons {
+//   display: flex;
+//   flex-direction: row;
+//   justify-content: flex-end;
+//   margin-top: 1rem;
+// }
+
+// .home-sort-buttons button {
+//   border: 1px solid #9fa6ae;
+//   background-color: white;
+//   color: #9fa6ae;
+// }
+
+// .home-question-wrapper {
+//   display: flex;
+//   flex-direction: row;
+// }
+
+// .question-area {
+//   width: 100%;
+//   display: flex;
+//   flex-direction: column;
+// }
+
+// .vote-box {
+//   text-align: center;
+//   padding: 0.5rem;
+// }
+// .vote-answer {
+//   text-align: center;
+//   border: 1px solid #5fba7e;
+//   padding: 0.5rem;
+// }
+// .vote-views {
+//   text-align: center;
+//   padding: 0.5rem;
+// }
+
+// .question-area-top {
+//   // display: flex;
+//   // flex-direction: row;
+// }
+
+// .bounty {
+//   background-color: #0277cc;
+//   // width: 10%;
+//   // text-align: center;
+//   // color: white;
+//   // font-size: initial;
+//   // height: 2rem;
+//   // display: flex;
+//   // align-items: center;
+//   // flex-direction: column;
+//   float: left;
+//   color: #fff;
+//   font-size: 11px;
+//   padding: 0.2em 0.5em 0.25em;
+//   line-height: 1.3;
+//   // background-color: var(--blue-600);
+//   margin-right: 5px;
+//   border-radius: 2px;
+// }
+
+// .question-area-bottom {
+//   display: flex;
+//   flex-direction: row;
+// }
+
+// .question-area-top {
+//   flex: 1 auto;
+//   width: auto;
+//   float: none;
+//   margin: 0;
+//   overflow: hidden;
+// }
