Summary complete for now

--- a/ClientApp/src/pages/home.scss
+++ b/ClientApp/src/pages/home.scss
@@ -157,4 +157,11 @@ code {
 .tags div {
   background-color: #e1ecf4;
   margin: 0rem 0.5rem 0rem 0.5rem;
+  padding: 5px 5px;
+  height: auto;
+  color: #39749e;
+}
+
+.question-summary {
+  color: #0064bd;
 }
