--- a/ClientApp/src/pages/addquestion.scss
+++ b/ClientApp/src/pages/addquestion.scss
@@ -1,9 +1,20 @@
 h1 {
   font-size: 1.5rem;
+  margin-top: 1rem;
+  margin-bottom: 3rem;
 }
 
 h2 {
   font-size: 1rem;
+}
+
+p {
+  margin-bottom: 0.25rem;
+}
+
+.question-section {
+  padding: 1rem;
+  box-shadow: 0px 0px 5px black;
 }
 
 .question-title {
@@ -12,6 +23,7 @@ h2 {
 
 .question-body {
   width: 100%;
+  height: 12rem;
 }
 
 .question-tags {
@@ -20,4 +32,10 @@ h2 {
 
 input {
   margin-bottom: 1rem;
+}
+
+.add-question {
+  background-color: #0395ff;
+  color: white;
+  border-radius: 5px;
 }
