Added box shadow to Add Question

--- a/ClientApp/src/pages/addquestion.scss
+++ b/ClientApp/src/pages/addquestion.scss
@@ -3,6 +3,11 @@
   margin-bottom: 2rem;
 }
 
+.add-question-section {
+  box-shadow: 0px 0px 5px black;
+  padding: 1rem;
+}
+
 .add-question-subheader {
   font-size: 1rem;
 }
