--- a/ClientApp/src/pages/search.scss
+++ b/ClientApp/src/pages/search.scss
@@ -71,6 +71,8 @@
   border-color: #1861ac;
   font-size: 1.1rem;
   height: 2.1rem;
+  margin-bottom: 0.5rem;
+  padding-top: 0.1rem;
 }
 
 .search-search-button a {
@@ -121,8 +123,18 @@
 .result-stats-container {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-evenly;
   text-align: center;
+  object-fit: contain;
+  width: 20%;
+}
+
+.result-stats {
+  height: 75%;
+}
+
+.result-views {
+  height: 25%;
 }
 
 .result-votes {
@@ -130,19 +142,28 @@
   flex-direction: column;
 }
 
+.result-answers {
+  display: flex;
+  flex-direction: column;
+}
+
 .result-summary-top {
   display: flex;
   flex-direction: column;
+  height: 55%;
 }
 
 .result-summary-bottom {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  height: 45%;
 }
 
 .result-summary {
   padding-left: 0.5rem;
+  width: 80%;
+  object-fit: contain;
 }
 
 .result-question-title {
@@ -179,11 +200,38 @@
   padding-bottom: 0.5rem;
 }
 
+.result-tags div {
+  background-color: #e1ecf4;
+  margin: 0rem 0.5rem 0rem 0.5rem;
+  padding: 5px 5px;
+  height: auto;
+  color: #39749e;
+}
+
+.result-tags {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: #e1ecf4;
+  margin: 0rem 0.5rem 0rem 0.5rem;
+  padding: 5px 5px;
+  height: auto;
+  color: #39749e;
+}
+
+.result-tags div {
+  background-color: #e1ecf4;
+  margin: 0rem 0.5rem 0rem 0.5rem;
+  padding: 5px 5px;
+  height: auto;
+  color: #39749e;
+}
+
 @media (max-width: 800px) {
   .result-question-summary {
-    height: 25vh;
-    width: 80vw;
+    max-height: 9rem;
     object-fit: contain;
+    width: 80vw;
   }
   .search-parent {
     min-width: 24.063rem;
@@ -195,9 +243,9 @@
 
 @media (min-width: 800px) and (max-width: 1020px) {
   .result-question-summary {
-    height: 25vh;
+    max-height: 7rem;
+    object-fit: contain;
     width: 98vw;
-    object-fit: fill;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -208,13 +256,17 @@
   .search-field {
     width: 58vw;
   }
+
+  .result-stats-container {
+    font-size: 0.8rem;
+  }
 }
 
 @media (min-width: 1021px) {
   .result-question-summary {
-    height: 25vh;
+    max-height: 6rem;
+    object-fit: contain;
     width: 98vw;
-    object-fit: fill;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
