--- a/ClientApp/src/pages/home.scss
+++ b/ClientApp/src/pages/home.scss
@@ -165,3 +165,54 @@ code {
 .question-summary {
   color: #0064bd;
 }
+
+.vote-answer {
+  border-radius: 0.18rem;
+}
+
+@media (max-width: 800px) {
+  .home-question-wrapper {
+    max-height: 9rem;
+    object-fit: contain;
+  }
+  .question-area-top {
+    height: 50%;
+  }
+  .question-area-bottom {
+    height: 50%;
+  }
+}
+
+@media (min-width: 800px) and (max-width: 1020px) {
+  .home-question-wrapper {
+    max-height: 7rem;
+    object-fit: contain;
+  }
+  .question-area-top {
+    height: 50%;
+  }
+  .question-area-bottom {
+    height: 50%;
+  }
+}
+
+@media (max-width: 700px) {
+  .home-question-wrapper {
+    max-height: 9rem;
+    object-fit: contain;
+  }
+  .question-area-top {
+    height: 50%;
+  }
+  .question-area-bottom {
+    height: 50%;
+    padding-bottom: 0.15rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .home-question-wrapper {
+    max-height: 6rem;
+    object-fit: contain;
+  }
+}
