--- a/ClientApp/src/pages/QuestionDetails.scss
+++ b/ClientApp/src/pages/QuestionDetails.scss
@@ -45,3 +45,11 @@
   border-radius: 5px;
   margin-left: 10px;
 }
+
+.question-answer-header {
+  margin-left: 5px;
+}
+
+.answer-section {
+  margin-left: 10px;
+}
