Login Signup some CSS

--- a/ClientApp/src/pages/signup.scss
+++ b/ClientApp/src/pages/signup.scss
@@ -1,6 +1,36 @@
-// .signup-create {
-//   color: red;
-// }
+.signup-page {
+  display: flex;
+  flex-direction: row;
+  background-color: white;
+  width: 25%;
+  height: 100%;
+  padding: 1rem;
+  align-content: inherit;
+  margin: auto;
+}
 
-.sign-up h2 {
+.signup-page input {
+  border-style: solid;
+  border-color: #bbc0c4;
+  border-width: 1px;
+  border-radius: 3px;
+}
+
+.signup-page label {
+  font-weight: bold;
+}
+
+.create-account-button {
+  background-color: #0395ff;
+  color: white;
+  margin: 0rem 1rem 1rem 1rem;
+  width: 10vw;
+  margin-top: 1rem;
+}
+
+.middle-pane {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  width: 183px;
 }
