--- a/ClientApp/src/pages/search.scss
+++ b/ClientApp/src/pages/search.scss
@@ -18,16 +18,9 @@
 }
 
 .search-ask-button {
-  border-left: none;
-  border-right: none;
-  border-bottom: none;
-  border-radius: 0.15rem;
-  border-top: 0.3rem;
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
-  height: 2.1rem;
-  text-align: center;
+  background-color: #0395ff;
+  color: white;
+  border-radius: 5px;
 }
 
 .search-ask-button a {
