--- a/ClientApp/src/custom.scss
+++ b/ClientApp/src/custom.scss
@@ -17,7 +17,8 @@ code {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  width: 100%;
+  width: 100vw;
+  height: 100vh;
   background-color: white;
 }
 
