--- a/ClientApp/src/pages/home.scss
+++ b/ClientApp/src/pages/home.scss
@@ -90,17 +90,23 @@ code {
   text-align: center;
   padding: 0.5rem;
   margin-top: 1rem;
+  color: gray;
 }
 .vote-answer {
   text-align: center;
-  border: 1px solid #5fba7e;
   padding: 0.5rem;
   margin-top: 1rem;
+  color: gray;
 }
 .vote-views {
   text-align: center;
   padding: 0.5rem;
   margin-top: 1rem;
+  color: gray;
+}
+
+.contributor {
+  color: gray;
 }
 
 .bounty {
@@ -129,11 +135,22 @@ code {
   justify-content: space-between;
 }
 
+.question-area-tags div {
+  background-color: #e1ecf4;
+  margin: 0rem 0.5rem 0rem 0.5rem;
+  padding: 2px 10px;
+  height: auto;
+  color: #39749e;
+  width: auto;
+  border-radius: 5px;
+}
+
 .question-area-top {
   flex: 1 auto;
   width: auto;
   float: none;
   margin: 0;
+  margin-left: 0.5rem;
   overflow: hidden;
 }
 
@@ -157,6 +174,10 @@ code {
 
 .vote-answer {
   border-radius: 0.18rem;
+}
+
+a:hover {
+  text-decoration: none;
 }
 
 @media (max-width: 800px) {
