--- a/ClientApp/src/pages/QuestionDetails.scss
+++ b/ClientApp/src/pages/QuestionDetails.scss
@@ -53,3 +53,43 @@
 .answer-section {
   margin-left: 10px;
 }
+
+.question-and-scoring {
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+}
+
+.question-scoring {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  width: 20%;
+  justify-content: space-evenly;
+}
+
+.question-scoring > img {
+  object-fit: contain;
+}
+
+.question-sans-scoring {
+  width: 80%;
+}
+
+.upvote-div {
+  height: 40%;
+  // background-image: url('../images/up-grey.png');
+  // background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.downvote-div {
+  height: 40%;
+  // background-image: url('../images/down-grey.png');
+  // background-repeat: no-repeat;
+  // background-size: contain;
+}
+
+.question-score {
+  height: 20%;
+}
