--- a/ClientApp/src/components/NavMenu/style.scss
+++ b/ClientApp/src/components/NavMenu/style.scss
@@ -70,10 +70,33 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  height: 50px;
 }
 
 .site-logo {
   padding-left: 1rem;
   height: 32px;
   width: auto;
+}
+
+.nav-buttons {
+  margin-right: 2rem;
+}
+
+.nav-login-button {
+  margin: 0;
+  width: 70px;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+  border-radius: 5px;
+}
+
+.nav-signup-button {
+  margin: 0;
+  width: 90px;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+  background-color: #0395ff;
+  color: white;
+  border-radius: 5px;
 }
