--- a/ClientApp/src/pages/QuestionDetails.scss
+++ b/ClientApp/src/pages/QuestionDetails.scss
@@ -64,8 +64,9 @@
   display: flex;
   flex-direction: column;
   text-align: center;
-  width: 20%;
+  width: 10%;
   justify-content: space-evenly;
+  padding-right: 0.5rem;
 }
 
 .question-scoring > img {
@@ -73,20 +74,21 @@
 }
 
 .question-sans-scoring {
-  width: 80%;
+  width: 90%;
 }
 
 .upvote-div {
-  height: 40%;
-  background-size: contain;
+  height: 30%;
 }
 
 .downvote-div {
-  height: 40%;
+  height: 30%;
 }
 
 .question-score {
-  height: 20%;
+  height: 30%;
+  padding-bottom: 0.5rem;
+  font-weight: bold;
 }
 
 .answer-and-scoring {
@@ -98,15 +100,68 @@
 .answer-scoring {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  text-align: center;
+  padding-right: 0.5rem;
 }
 
 .answer-upvote-div {
-  height: 40%;
+  height: 30%;
 }
 .answer-score {
-  height: 20%;
+  height: 30%;
+  padding-bottom: 0.5rem;
+  font-weight: bold;
 }
 
 .answer-downvote-div {
-  height: 40%;
+  height: 30%;
+}
+
+.answer-section {
+  border-bottom: solid grey 1px;
+  margin-bottom: 0.25rem;
+}
+
+.answer-sans-scoring {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.vote-buttons {
+  background-color: #0395ff;
+  color: white;
+  border-radius: 5px;
+}
+
+.vote-buttons a {
+  color: #fff;
+  font-size: 1.1rem;
+  text-decoration: none;
+  padding-left: 0.2rem;
+}
+
+.vote-buttons a:link {
+  color: #fff;
+  font-size: 1.1rem;
+  text-decoration: none;
+}
+
+.vote-buttons a:visited {
+  color: #fff;
+  font-size: 1.1rem;
+  text-decoration: none;
+}
+
+.vote-buttons a:hover {
+  color: #fff;
+  font-size: 1.1rem;
+  text-decoration: none;
+}
+
+.vote-buttons a:active {
+  color: #fff;
+  font-size: 1.1rem;
+  text-decoration: none;
 }
